--- a/index.html
+++ b/index.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tic Tac Toe</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>tic tac toe</h1>
+    <main class="container">
+        <h1>tic tac toe</h1>
+        <section class="game">
+            <div data-box- index="0" class="box"></div>
+            <div data-box- index="1" class="box"></div>
+            <div data-box- index="2" class="box"></div>
+            <div data-box- index="3" class="box"></div>
+            <div data-box- index="4" class="box"></div>
+            <div data-box- index="5" class="box"></div>
+            <div data-box- index="6" class="box"></div>
+            <div data-box- index="7" class="box"></div>
+            <div data-box- index="8" class="box"></div>
+        </section>
+
+    </main>
+    
+    <script src="script.js"></script>
 </body>
 </html>
