game logic with bugs

--- a/index.html
+++ b/index.html
@@ -19,19 +19,20 @@
                 
             </ul>
         </section>
-        <section class="game">
-            <div data-index="0" class="box"></div>
-            <div data-index="1" class="box"></div>
-            <div data-index="2" class="box"></div>
-            <div data-index="3" class="box"></div>
-            <div data-index="4" class="box"></div>
-            <div data-index="5" class="box"></div>
-            <div data-index="6" class="box"></div>
-            <div data-index="7" class="box"></div>
-            <div data-index="8" class="box"></div>
+        <section id="board">
+            <div data-index="0" class="cell"></div>
+            <div data-index="1" class="cell"></div>
+            <div data-index="2" class="cell"></div>
+            <div data-index="3" class="cell"></div>
+            <div data-index="4" class="cell"></div>
+            <div data-index="5" class="cell"></div>
+            <div data-index="6" class="cell"></div>
+            <div data-index="7" class="cell"></div>
+            <div data-index="8" class="cell"></div>
         </section>
         <section class="status">
             <h4>Game Status</h4>
+            <p id="player"></p>
         </section>
        
 
